syntax = "proto3";
option java_package = "oracle.spectra.database.model";

enum Command {
  COMMAND_PREPARESTATEMENT = 0;
  COMMAND_PREPARECALL = 1;
  COMMAND_BIND = 2;
  COMMAND_EXECUTE = 3;
  COMMAND_EXECUTEQUERY = 4;
  COMMAND_NEXTROWS = 5;
  COMMAND_CLOSERESULTSET = 6;
  COMMAND_CLOSEPREPAREDSTATEMENT = 7;
  COMMAND_CLOSECALLABLESTATEMENT = 8;
  COMMAND_ERROR = 9;
}

message DatabaseCommand {
  Command type = 1;
  oneof content {
      PrepareStatementRequest prepareStatement = 2;
      PrepareCallRequest prepareCall = 3;
      BindRequest bind = 4;
      ExecuteRequest execute = 5;
      ExecuteQueryRequest executeQuery = 6;
      NextRowsRequest nextRows = 7;
      CloseResultSetRequest closeResultSet = 8;
      ClosePreparedStatementRequest closePreparedStatement = 9;
      CloseCallableStatementRequest closeCallableStatement = 10;
  }
}

message DatabaseResult {
  Command type = 1;
  oneof content {
    PrepareStatementResponse prepareStatement = 2;
    PrepareCallResponse prepareCall = 3;
    BindResponse bind = 4;
    ExecuteResponse execute = 5;
    ExecuteQueryResponse executeQuery = 6;
    NextRowsResponse nextRows = 7;
    CloseResultSetResponse closeResultSet = 8;
    ClosePreparedStatementResponse closePreparedStatement = 9;
    CloseCallableStatementResponse closeCallableStatement = 10;
    ErrorResponse error = 11;
  }
}

message ErrorResponse {
  string errorMessage = 1;
  string stackTrace = 2;
}

message PrepareStatementRequest {
  string sql = 1;
}

message PrepareStatementResponse {
  int32 statementId = 1;
  int32 columnCount = 2;
  repeated string columnNames = 3;
}

message PrepareCallRequest {
  string sql = 1;
}

message PrepareCallResponse {
  int32 statementId = 1;
}

message BindRequest {
  int32 statementId = 1;
  map<string, Value> values = 2;
}

message BindResponse {
}

message ExecuteRequest {
  int32 statementId = 1;
}

message ExecuteResponse {

}

message ExecuteQueryRequest {
  int32 statementId = 1;
}

message ExecuteQueryResponse {
  int32 resultSetId = 1;
}

message NextRowsRequest {
  int32 statementId = 1;
  int32 resultSetId = 2;
}

message NextRowsResponse {
  repeated Row row = 1;
  bool hasMore = 2;
}

message CloseResultSetRequest {
  int32 resultSetId = 1;
}

message CloseResultSetResponse {

}

message ClosePreparedStatementRequest {
  int32 statementId = 1;
}

message ClosePreparedStatementResponse {

}

message CloseCallableStatementRequest {
  int32 statementId = 1;
}

message CloseCallableStatementResponse {

}

message Row {
  repeated Field field = 1;
}

message Field {
  string name = 1;
  Value value = 2;
}

message Value {
  ValueType type = 1;
  bool isNull = 2;
  oneof content {
    string decimal = 3;
    int64 int = 4;
    string text = 5;
    string date = 6;
  }
}

enum ValueType {
  VALUE_UNKNOWN = 0;
  VALUE_DECIMAL = 1;
  VALUE_INTEGRAL = 2;
  VALUE_TEXT = 3;
  VALUE_DATE = 4;
}

